* 2013-06-19 - marcus.klein@open-xchange.com

 - Fix for bug 27147: Added necessary dependency for update task to have them run in the correct order.

* 2013-06-17 - jan.bauerdick@open-xchange.com

 - Fix for bug 27097: Added missing columns to CreateTableServices

* 2013-06-14 - thorben.betten@open-xchange.com

 - Fix for bug 27098: Added missing imports to MANIFEST.MF file

* 2013-06-13 - choeger@open-xchange.com

 - Fix for bug 25205: Restarting the groupware process leads to a 'Port already
   in use: 9999' error

* 2013-06-04 - thorben.betten@open-xchange.com

 - Fix for bug 26911: Turned into an abstract class

* 2013-05-28 - thorben.betten@open-xchange.com

 - Fix for bug 26815: Don't interrupt appender task if not finished

* 2013-05-27 - thorben.betten@open-xchange.com

 - Fix for bug 26779: Reduce log level for htmlunit.jar

* 2013-05-27 - marcus.klein@open-xchange.com

 - US 47575615: Added interface method for counting tasks, using that for folder object count value and added the according acceptance test.

* 2013-05-26 - thorben.betten@open-xchange.com

 - Fix for bug 26737: Added update task to enlarge the UID field of calendar tables
 - Fix for bug 26781: Proper invocation of OXException constructor

* 2013-05-24 - thorben.betten@open-xchange.com

 - Fix for bug 26474: Avoid timeout through initiating 102 Processing interim responses
 - Fix for bug 26479: Accept multiple upload files associated with the same field name
 - Fix for bug 24519: Maintain inlined images during auto-save and forward/reply actions

* 2013-05-23 - thorben.betten@open-xchange.com

 - Fix for bug 26760: Fixed possible ArrayIndexOutOfBoundsException

* 2013-05-22 - marc.arens@open-xchange.com

 - Fix for bug 26580: Remove superfluous warning

* 2013-05-21 - marcus.klein@open-xchange.com

 - Fix for bug 26680: Moved filemanagement bundles into an own package open-xchange-file-distribution.

* 2013-05-17 - marc.arens@open-xchange.com
